syntax = "proto3";

package ON.Fragments.Content;

import "Protos/ON/Fragments/Content/ContentRecord.proto";

// Service for Content fragment interface
service ContentInterface {
  rpc GetAllContent (GetAllContentRequest) returns (GetAllContentResponse) {}
  rpc GetContent (GetContentRequest) returns (GetContentResponse) {}
  rpc SaveContent (SaveContentRequest) returns (SaveContentResponse) {}

}
  
message GetAllContentRequest {
}
  
message GetAllContentResponse {
  repeated ContentRecord Records = 1;
}
  
message GetContentRequest {
  bytes ContentID = 1;   // Guid for the content record
}
  
message GetContentResponse {
  ContentRecord Content = 1;
}
  
message SaveContentRequest {
  ContentRecord Content = 1;
}
  
message SaveContentResponse {
  ContentRecord Content = 1;
}
